# water-manager-agroproject

./: .env.example  .gitignore  agro_water.db  package-lock.json  pyproject.toml  run.py
app/: database.py  main.py  startup.py
app/api/: calculate.py  case1.py  crops.py  data_management.py  extended.py  import_export.py
app/data/: crops.py  irrigation_regime_tj.py  regions_tj.py
app/models/: extended_schemas.py  schemas.py
app/services/: case1_calculation.py  data_service.py  export.py  water_calc.py  weather.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css  index.jsx
frontend/src/api/: dataApi.js  exportApi.js  extendedApi.js  waterApi.js
frontend/src/components/: CalculationForm.jsx  Case1Form.jsx  Case1Planning.jsx  Case1Results.jsx  CropDetails.jsx  DailyPlanTable.jsx  ErrorMessage.jsx  ExportButtons.jsx  Header.jsx  Loading.jsx  MonthlyPlan.jsx  MultiplePlots.jsx  PlotMap.jsx  Recommendations.jsx  Results.jsx  Scenarios.jsx  StatsCards.jsx  ThemeToggle.jsx  WaterChart.jsx
frontend/src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  Icon.jsx  Input.jsx  Label.jsx  Select.jsx  Tabs.jsx  Toast.jsx
frontend/src/constants/: crops.js
frontend/src/lib/: utils.js
frontend/src/utils/: exportUtils.js
